[package]
name = "rustpad-server"
version = "0.2.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.87"
bytecount = "0.6"
dashmap = "6.0.0"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.22"
operational-transform = { version = "0.6.1", features = ["serde"] }
parking_lot = "0.12.3"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full", "test-util"] }
tokio-stream = "0.1.6"
warp = { version = "0.3.7", features = ["tls"]}

[dev-dependencies]
tempfile = "3.12.0"
